--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/react": "^3.0.3",
     "ai": "^6.0.3",
     "next": "16.1.1",
+    "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "zod": "^4.1.12"
