gemini 2.5 flash nano banana pro for image gen through openrouter for now

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-# OpenAI
-OPENAI_API_KEY=sk-your-openai-key
-
-# Image generation (optional)
-ENABLE_IMAGE_GENERATION=false
-
-# Anthropic (optional - if using Claude models)
-ANTHROPIC_API_KEY=sk-ant-your-anthropic-key
-
-# OpenRouter (optional - OpenAI-compatible)
+# OpenRouter (required for image generation)
 OPENROUTER_API_KEY=sk-or-your-openrouter-key
 OPENROUTER_REFERRER=http://localhost:3000
 OPENROUTER_TITLE=vibible
+
+# Image generation (set to true to enable)
+ENABLE_IMAGE_GENERATION=false
+
+# Anthropic (optional - for Claude chat models)
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-key
+
+# OpenAI (optional - fallback for chat)
+OPENAI_API_KEY=sk-your-openai-key
