--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^3.0.1",
     "@ai-sdk/openai": "^3.0.1",
     "@ai-sdk/react": "^3.0.3",
     "ai": "^6.0.3",
@@ -21,6 +20,9 @@
     "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
