first pass convex impl with verseImages storage

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ OPENROUTER_TITLE=visibible
 
 # Image generation (set to true to enable)
 ENABLE_IMAGE_GENERATION=false
+
+# Convex (for image storage)
+CONVEX_DEPLOYMENT=
+NEXT_PUBLIC_CONVEX_URL=
