--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,9 @@ OPENROUTER_TITLE=visibible
 ENABLE_IMAGE_GENERATION=false
 
 # Convex (for image storage)
+# Deployment name from Convex dashboard (e.g., 'prod:your-deployment-name')
+# Find this in your Convex dashboard under Deployment Settings
 CONVEX_DEPLOYMENT=
+# Public URL/endpoint from Convex dashboard (e.g., 'https://your-deployment-name.convex.cloud')
+# Find this in your Convex dashboard under Deployment Settings
 NEXT_PUBLIC_CONVEX_URL=
