--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.1",
     "@ai-sdk/react": "^3.0.3",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
     "ai": "^6.0.3",
+    "bolt11": "^1.4.0",
     "convex": "^1.31.2",
     "jose": "^6.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
     "qrcode": "^1.5.4",
-    "bolt11": "^1.4.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
