--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,15 @@ CONVEX_SERVER_SECRET=
 SESSION_SECRET=
 # Separate secret for IP hashing (defense in depth - if SESSION_SECRET leaks, IP hashes remain unpredictable)
 # Generate with: openssl rand -base64 32
-# Falls back to SESSION_SECRET if not set (for backward compatibility)
 IP_HASH_SECRET=
 # Proxy trust (recommended in production for accurate client IPs)
+# See llm/security/PROXY_CONFIGURATION.md for detailed guidance
 # TRUST_PROXY_PLATFORM=vercel
 # TRUSTED_PROXY_IPS="203.0.113.10,203.0.113.0/24,2001:db8::/32"
+# DEBUG_PROXY=true  # Enable proxy trust audit logging
+# Public app URL (recommended in production for origin validation allowlist)
+# Example: https://your-app-domain.com
+NEXT_PUBLIC_APP_URL=
 
 # Lightning payments (for credit purchases)
 # Voltage LND node hostname (without https:// or port)
